[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "simple_shapes_RL"
version = "0.0.1"
authors = [
    {name = "Léopold Maytié", email = "leopold.maytie@univ-tlse3.fr"},
]
dependencies = [
    "bim-gw @ git+https://github.com/bdvllrs/bimGW.git@master",
    "gymnasium == 0.29.1",
    "stable-baselines3 == 2.2.1"
]
requires-python = "==3.10.12"

[tool.setuptools]
py-modules = []